medusa-storefront.xuperson.org/medusa-storefront-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medusa-storefront
  labels:
    name: medusa-storefront
    app.kubernetes.io/name: medusa-storefront
    app.kubernetes.io/part-of: medusa-cluster
